@@ -379,34 +379,37 @@ void DoFCEUExit()
 	if(exiting)    //Eh, oops.  I'll need to try to fix this later.
 		return;
 
-	if(goptions & GOO_CONFIRMEXIT)
+	if (CloseMemoryWatch())		//If user was asked to save changes in the memory watch dialog, and chose cancel, don't close FCEUX!	
 	{
-		//Wolfenstein 3D had cute exit messages.
-		const char * const emsg[7]={"Are you sure you want to leave?  I'll become lonely!",
-			"A strange game. The only winning move is not to play. How about a nice game of chess?",
-			"If you exit, I'll... EAT YOUR MOUSE.",
-			"You can never really exit, you know.",
-			"E.X.I.T?",
-			"I'm sorry, you missed your exit. There is another one in 19 miles",
-			"Silly Exit Message goes here"
-
-		};
-
-		if(IDYES != MessageBox(hAppWnd, emsg[rand() & 6], "Exit FCE Ultra?", MB_ICONQUESTION | MB_YESNO) )
+		if(goptions & GOO_CONFIRMEXIT)
 		{
-			return;
+			//Wolfenstein 3D had cute exit messages.
+			const char * const emsg[7]={"Are you sure you want to leave?  I'll become lonely!",
+				"A strange game. The only winning move is not to play. How about a nice game of chess?",
+				"If you exit, I'll... EAT YOUR MOUSE.",
+				"You can never really exit, you know.",
+				"E.X.I.T?",
+				"I'm sorry, you missed your exit. There is another one in 19 miles",
+				"Silly Exit Message goes here"
+
+			};
+
+			if(IDYES != MessageBox(hAppWnd, emsg[rand() & 6], "Exit FCE Ultra?", MB_ICONQUESTION | MB_YESNO) )
+			{
+				return;
+			}
 		}
-	}
 
-	CloseMemoryWatch();	
+		
 
-	KillDebugger(); //mbg merge 7/19/06 added
+		KillDebugger(); //mbg merge 7/19/06 added
 
-	FCEUI_StopMovie();
-	FCEUD_AviStop();
+		FCEUI_StopMovie();
+		FCEUD_AviStop();
 
-	exiting = 1;
-	closeGame = true;//mbg 6/30/06 - for housekeeping purposes we need to exit after the emulation cycle finishes
+		exiting = 1;
+		closeGame = true;//mbg 6/30/06 - for housekeeping purposes we need to exit after the emulation cycle finishes
+		}
 }
 
 void FCEUD_OnCloseGame()
